add contact info

--- a/index.html
+++ b/index.html
@@ -37,16 +37,24 @@
     </section>
 
     <!--about me-->
-    <section>
+    <section id="about-me">
+    <h2></h2>
 
     </section>
     <!--work-->
-    <section>
+    <section id="work">
+        <div></div>
 
     </section>
 
     <!--Contact me-->
-    <section>
+    <section id="contact-me">
+        <h2>Contanct info</h2>
+        <ul>
+            <li><strong>Email</strong> <a href="#">mwclimb@gmail.com</a></li>
+            <li> <strong>Github</strong> <a href="#">mikeysoar@github.io</a></li>
+            <li><strong>LinkedIn</strong> <a href="#">my linkenin profile</a></li>
+        </ul>
 
     </section>
 
