still trying to get stylesheet to work

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width-device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Portfolio Michael Warner</title>
-    <link rel="stlyesheet" href="./Assets/css/style.css" />
+    <link rel="stlyesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
-
-    <header>
-        <!--Navigation-->
-        <h1 id="name">Michael Warner</h1>
+ <!--Navigation-->
+    <header>       
+        <h1>Michael Warner</h1>
         <nav>
             <!--unorderlist-->
             <ul>
@@ -23,21 +22,18 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="contact-me">Contact Me</a>
+                    <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="resume">Resume</a>
+                    <a href="#resume">Resume</a>
                 </li>
             </ul>
         </nav>
     </header>
 
 
-    <!--hero section-->
-    <section>
-
-       
-    </section>
+    <!--subtitle section-->
+    
 
     <!--about me-->
     <section id="about-me">
@@ -69,7 +65,7 @@
     <section id="contact-me">
         <h2>Contact info</h2>
         <ul>
-            <li><strong>Email</strong> <a href="#">mwclimb@gmail.com</a></li>
+            <li><strong>Email</strong> <a href="mailto:mwclimb@gmail.com">mwclimb@gmail.com</a></li>
             <li> <strong>Github</strong> <a href="#">mikeysoar@github.io</a></li>
             <li><strong>LinkedIn</strong> <a href="#">my linkenin profile</a></li>
         </ul>
@@ -84,10 +80,9 @@
             eligendi impedit temporibus dicta maxime et totam rem!
         </p>
     </section>
-
-
-
+<!-- footer -->
     <footer>
+        <h5>footer</h5>
 
     </footer>
 
