--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Portfolio Michael Warner</title>
-    <link rel="stlyesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
- <!--Navigation-->
-    <header>       
+    <!--Navigation-->
+    <header>
         <h1>Michael Warner</h1>
         <nav>
             <!--unorderlist-->
@@ -33,17 +33,23 @@
 
 
     <!--subtitle section-->
-    
+    <section class="subtitle" title="snow covered mountain">
+        <h3>Love the Look of snow covered Mountains!</h3>
+
+    </section>
 
     <!--about me-->
-    <section id="about-me">
-        <h2>About me</h2>
+    <section class="about-me" class="about-flex">
+        <h2>About<br /> Me</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Itaque praesentium nesciunt magni minima repellat sint,
-            laboriosam eum repudiandae. Praesentium explicabo debitis
-            exercitationem iure nulla tempore officiis laborum, aut
-            est adipisci!
+            I am a certified aircraft mechanic. I have been working with aircraft
+            electronics for the last several years. I enjoy working around
+            aircraft. It is always nice to see your work take off and
+            return at the endof flight. I enjoy the outdoor, including camping
+            and cooking with Dutch ovens. My faverite place to be, is high in
+            the Uinta mountains.
+
+
         </p>
 
     </section>
@@ -51,19 +57,34 @@
     <section id="work">
         <div>
             <h2>Work</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Necessitatibus tenetur nesciunt, consectetur quo quibusdam
-                minus, repellat eius, quos nostrum ipsam sequi totam 
-                velit? Corporis architecto tempore aut, dolore autem doloribus!
-            </p>
+            <nav>
+                <ul>
+                    <li class="first-image" title="runner, kneeling, tying her shoe">
+                        <a href="https://mikeysoar.github.io/run-buddy/">Run Buddy</a>
+                    </li>
+                    <div class="flex-container">
+                        <li class="flex-item">
+                            <a href="https://mikeysoar.github.io/Horiseon-Optimized/">Horiseon</a>
+                        </li>
+                        <li class="flex-item">
+                            <a href="">Place holder</a>
+                        </li>
+                        <li class="flex-item">
+                            <a href="">Place holder</a>
+                        </li>
+                        <li class="flex-item">
+                            <a href="">Place holder</a>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
         </div>
 
     </section>
 
     <!--Contact me-->
     <section id="contact-me">
-        <h2>Contact info</h2>
+        <h2>Contact Me</h2>
         <ul>
             <li><strong>Email</strong> <a href="mailto:mwclimb@gmail.com">mwclimb@gmail.com</a></li>
             <li> <strong>Github</strong> <a href="#">mikeysoar@github.io</a></li>
@@ -71,16 +92,16 @@
         </ul>
 
     </section>
-    <section id="Resume">
+    <section id="resume">
         <h2>Resume</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Expedita itaque neque alias magnam rerum, perspiciatis 
-            pariatur ad modi molestias exercitationem sed necessitatibus 
-            eligendi impedit temporibus dicta maxime et totam rem!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
+            Expedita itaque neque alias magnam rerum, perspiciatis <br />
+            pariatur ad modi molestias exercitationem sed necessitatibus <br />
+            eligendi impedit temporibus dicta maxime et totam rem!<br />
         </p>
     </section>
-<!-- footer -->
+    <!-- footer -->
     <footer>
         <h5>footer</h5>
 
