--- a/index.html
+++ b/index.html
@@ -39,15 +39,17 @@
     </section>
 
     <!--about me-->
-    <section class="about-me" class="about-flex">
-        <h2>About<br /> Me</h2>
+    <section class="about-me">
+        <h2 class="main">About<br /> Me</h2>
         <p>
             I am a certified aircraft mechanic. I have been working with aircraft
             electronics for the last several years. I enjoy working around
-            aircraft. It is always nice to see your work take off and
-            return at the endof flight. I enjoy the outdoor, including camping
-            and cooking with Dutch ovens. My faverite place to be, is high in
-            the Uinta mountains.
+            aircraft. <br/>It is always nice to see your work take off and
+            return at the end of flight. <br/>I enjoy the outdoors, including 
+            camping and cooking with Dutch ovens. My faverite place to be, 
+            is high in the Uinta mountains. <br/>I have talked around
+            the world using a 2 meter hand held, amature (Ham), radio with the help of 
+            internet links radio repeaters. <br/>I use Ham radio for emergency communication.
 
 
         </p>
@@ -56,7 +58,7 @@
     <!--work-->
     <section id="work">
         <div>
-            <h2>Work</h2>
+            <h2 class="main">Work</h2>
             <nav>
                 <ul>
                     <li class="first-image" title="runner, kneeling, tying her shoe">
@@ -84,7 +86,7 @@
 
     <!--Contact me-->
     <section id="contact-me">
-        <h2>Contact Me</h2>
+        <h2 class="main">Contact Me</h2>
         <ul>
             <li><strong>Email</strong> <a href="mailto:mwclimb@gmail.com">mwclimb@gmail.com</a></li>
             <li> <strong>Github</strong> <a href="#">mikeysoar@github.io</a></li>
@@ -93,7 +95,7 @@
 
     </section>
     <section id="resume">
-        <h2>Resume</h2>
+        <h2 class="main">Resume</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
             Expedita itaque neque alias magnam rerum, perspiciatis <br />
