--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <p>
             I am a certified aircraft mechanic. I have been working with aircraft
             electronics for the last several years. I enjoy working around
-            aircraft. <br/>It is always nice to see your work take off and
+            aircraft. It is great to see your work take off and
             return at the end of flight. <br/>I enjoy the outdoors, including 
             camping and cooking with Dutch ovens. My faverite place to be, 
             is high in the Uinta mountains. <br/>I have talked around
             the world using a 2 meter hand held, amature (Ham), radio with the help of 
-            internet links radio repeaters. <br/>I use Ham radio for emergency communication.
+            internet links and radio repeaters. I use Ham radio for emergency communication.
 
 
         </p>
