still making adjustments 20210509-0910

--- a/index.html
+++ b/index.html
@@ -40,73 +40,59 @@
 
     <!--about me-->
     <section class="about-me">
-        <h2 class="main">About<br /> Me</h2>
+        <h2>About<br /> Me</h2>
         <p>
             I am a certified aircraft mechanic. I have been working with aircraft
             electronics for the last several years. I enjoy working around
             aircraft. It is great to see your work take off and
-            return at the end of flight. <br/>I enjoy the outdoors, including 
-            camping and cooking with Dutch ovens. My faverite place to be, 
-            is high in the Uinta mountains. <br/>I have talked around
-            the world using a 2 meter hand held, amature (Ham), radio with the help of 
+            return at the end of flight. <br />I enjoy the outdoors, including
+            camping and cooking with Dutch ovens. My faverite place to be,
+            is high in the Uinta mountains. <br />I have talked around
+            the world using a 2 meter hand held, amature (Ham), radio with the help of
             internet links and radio repeaters. I use Ham radio for emergency communication.
-
-
         </p>
 
     </section>
     <!--work-->
-    <section id="work">
-        <div>
-            <h2 class="main">Work</h2>
-            <nav>
-                <ul>
+    <section class="work">
+        <h2>Work</h2>
+        <nav>
+            <ul>
+                <div class="flex-container">
                     <li class="first-image" title="runner, kneeling, tying her shoe">
                         <a href="https://mikeysoar.github.io/run-buddy/">Run Buddy</a>
                     </li>
-                    <div class="flex-container">
-                        <li class="flex-item">
-                            <a href="https://mikeysoar.github.io/Horiseon-Optimized/">Horiseon</a>
-                        </li>
-                        <li class="flex-item">
-                            <a href="">Place holder</a>
-                        </li>
-                        <li class="flex-item">
-                            <a href="">Place holder</a>
-                        </li>
-                        <li class="flex-item">
-                            <a href="">Place holder</a>
-                        </li>
-                    </div>
-                </ul>
-            </nav>
-        </div>
-
+                    <li class="flex-item1">
+                        <a href="https://mikeysoar.github.io/Horiseon-Optimized/">Horiseon</a>
+                    </li>
+                    <li class="flex-item2">
+                        <a href="">Place holder</a>
+                    </li>
+                    <li class="flex-item3">
+                        <a href="">Place holder</a>
+                    </li>
+                    <li class="flex-item4">
+                        <a href="">Place holder</a>
+                    </li>
+                </div>
+            </ul>
+        </nav>
     </section>
 
-    <!--Contact me-->
-    <section id="contact-me">
-        <h2 class="main">Contact Me</h2>
-        <ul>
-            <li><strong>Email</strong> <a href="mailto:mwclimb@gmail.com">mwclimb@gmail.com</a></li>
-            <li> <strong>Github</strong> <a href="#">mikeysoar@github.io</a></li>
-            <li><strong>LinkedIn</strong> <a href="#">my linkenin profile</a></li>
-        </ul>
-
-    </section>
-    <section id="resume">
-        <h2 class="main">Resume</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
-            Expedita itaque neque alias magnam rerum, perspiciatis <br />
-            pariatur ad modi molestias exercitationem sed necessitatibus <br />
-            eligendi impedit temporibus dicta maxime et totam rem!<br />
-        </p>
-    </section>
     <!-- footer -->
     <footer>
-        <h5>footer</h5>
-
+        <!--Contact me-->
+        <section class="contact-me">
+            <h2>Contact<br /> Me</h2>
+            <ul>
+                <li><strong>Phone</strong> <a href="tel:4358410589">435-841-0589</a></li>
+                <li><strong>Email</strong> <a href="mailto:mwclimb@gmail.com">mwclimb@gmail.com</a></li>
+                <li><strong>Github</strong> <a href="#">mikeysoar@github.io</a></li>
+                <li><strong>LinkedIn</strong> <a href="https://www.linkedin.com/in/michael-warner-29438449" 
+                    class="social-icon si-rounded si-small si-linkedin"></a>michael-warner-29438449</a></li>
+                    <i class="icon-linkedin"></i>
+            </ul>
+        </section>
     </footer>
 
 </body>
