--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="#resume">Resume</a>
+                    <a href="../my-portfolio-challenge/assets/docs/Michael Warner Resume_20210509.pdf">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -34,12 +34,15 @@
 
     <!--subtitle section-->
     <section class="subtitle" title="snow covered mountain">
-        <h3>Love the Look of snow covered Mountains!</h3>
+        <div class="portrait">
+            <img src="../my-portfolio-challenge/assets/images/portrait_20210509.jpg" alt="Michael Warner Portrait">
 
+            <h3>Love the Look of snow covered Mountains!</h3>
+        </div>
     </section>
 
     <!--about me-->
-    <section class="about-me">
+    <section id="about-me" class="about-me">
         <h2>About<br /> Me</h2>
         <p>
             I am a certified aircraft mechanic. I have been working with aircraft
@@ -54,46 +57,50 @@
 
     </section>
     <!--work-->
-    <section class="work">
-        <h2>Work</h2>
-        <nav>
-            <ul>
-                <div class="flex-container">
-                    <li class="first-image" title="runner, kneeling, tying her shoe">
-                        <a href="https://mikeysoar.github.io/run-buddy/">Run Buddy</a>
-                    </li>
-                    <li class="flex-item1">
-                        <a href="https://mikeysoar.github.io/Horiseon-Optimized/">Horiseon</a>
-                    </li>
-                    <li class="flex-item2">
-                        <a href="">Place holder</a>
-                    </li>
-                    <li class="flex-item3">
-                        <a href="">Place holder</a>
-                    </li>
-                    <li class="flex-item4">
-                        <a href="">Place holder</a>
-                    </li>
-                </div>
-            </ul>
-        </nav>
-    </section>
-
-    <!-- footer -->
-    <footer>
-        <!--Contact me-->
-        <section class="contact-me">
-            <h2>Contact<br /> Me</h2>
-            <ul>
-                <li><strong>Phone</strong> <a href="tel:4358410589">435-841-0589</a></li>
-                <li><strong>Email</strong> <a href="mailto:mwclimb@gmail.com">mwclimb@gmail.com</a></li>
-                <li><strong>Github</strong> <a href="#">mikeysoar@github.io</a></li>
-                <li><strong>LinkedIn</strong> <a href="https://www.linkedin.com/in/michael-warner-29438449" 
-                    class="social-icon si-rounded si-small si-linkedin"></a>michael-warner-29438449</a></li>
-                    <i class="icon-linkedin"></i>
-            </ul>
+    <div class="container">
+        <section id="work" class="work">
+            <h2>Work</h2>
+            <nav>
+                <ul>
+                    <div class="flex-container">
+                        <li class="first-image" title="runner, kneeling, tying her shoe">
+                            <a href="https://mikeysoar.github.io/run-buddy/">Run Buddy</a>
+                        </li>
+                        <li class="flex-item1">
+                            <a href="https://mikeysoar.github.io/Horiseon-Optimized/">Horiseon</a>
+                        </li>
+                        <li class="flex-item2">
+                            <a href="">Place holder</a>
+                        </li>
+                        <li class="flex-item3">
+                            <a href="">Place holder</a>
+                        </li>
+                        <li class="flex-item4">
+                            <a href="">Place holder</a>
+                        </li>
+                    </div>
+                </ul>
+            </nav>
         </section>
+    </div>
+    <!-- footer -->
+
+
+    <!--Contact me-->
+    <footer id="contact-me" class="contact-me">
+        <div class="container"></div>
+        <h2>Contact<br /> Me</h2>
+        <ul>
+            <li><strong>Phone</strong> <a href="tel:4358410589">435-841-0589</a></li>
+            <li><strong>Email</strong> <a href="mailto:mwclimb@gmail.com">mwclimb@gmail.com</a></li>
+            <li><strong>Github</strong> <a href="https://github.com/mikeysoar">github.com/mikeysoar</a></li>
+            <li><strong>LinkedIn</strong> <a href="https://www.linkedin.com/in/michael-warner-29438449"
+                    class="social-icon si-rounded si-small si-linkedin"></a>michael-warner-29438449</a></li>
+            <i class="icon-linkedin"></i>
+        </ul>
+        </div>
     </footer>
+
 
 </body>
 
