--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
             <nav>
                 <ul>
                     <div class="flex-container">
-                        <li class="first-image" title="runner, kneeling, tying her shoe">
+                        <li class="flex-item-1" title="runner, kneeling, tying her shoe">
                             <a href="https://mikeysoar.github.io/run-buddy/">Run Buddy</a>
                         </li>
-                        <li class="flex-item1">
+                        <li class="flex-item-2">
                             <a href="https://mikeysoar.github.io/Horiseon-Optimized/">Horiseon</a>
                         </li>
-                        <li class="flex-item2">
+                        <li class="flex-item-3">
                             <a href="">Place holder</a>
                         </li>
-                        <li class="flex-item3">
+                        <li class="flex-item-4">
                             <a href="">Place holder</a>
                         </li>
-                        <li class="flex-item4">
+                        <li class="flex-item-5">
                             <a href="">Place holder</a>
                         </li>
                     </div>
