--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="../my-portfolio-challenge/assets/docs/Michael Warner Resume_20210509.pdf">Resume</a>
+                    <a href="./Assets/docs/Michael Warner Resume_20210509.pdf">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -35,7 +35,7 @@
     <!--subtitle section-->
     <section class="subtitle" title="snow covered mountain">
         <div class="portrait">
-            <img src="../my-portfolio-challenge/assets/images/portrait_20210509.jpg" alt="Michael Warner Portrait">
+            <img src="./Assets/images/portrait_20210509.jpg" alt="Michael Warner Portrait">
 
             <h3>Love the Look of snow covered Mountains!</h3>
         </div>
