added projec-1 to protfolio

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
             <nav>
                 <ul>
                     <div class="flex-container">
-                        <li class="flex-item-1" title="runner, kneeling, tying her shoe">
-                            <a href="https://mikeysoar.github.io/run-buddy/">Run Buddy</a>
+                        <li class="flex-item-1">
+                            <a href="https://mikeysoar.github.io/project-1/">Artist Music and Random Stories</a>
                         </li>
                         <li class="flex-item-2">
                             <a href="https://mikeysoar.github.io/Horiseon-Optimized/">Horiseon</a>
                         </li>
-                        <li class="flex-item-3">
-                            <a href="">Place holder</a>
+                        <li class="flex-item-3" title="runer, kneeling, tying her shoe">
+                            <a href="https://mikeysoar.github.io/run-buddy/">Run Buddy</a>
                         </li>
                         <li class="flex-item-4">
                             <a href="">Place holder</a>
