--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                         <li class="flex-item-3" title="runer, kneeling, tying her shoe">
                             <a href="https://mikeysoar.github.io/run-buddy/">Run Buddy</a>
                         </li>
-                        <li class="flex-item-4">
-                            <a href="">Place holder</a>
+                        <li class="flex-item-4" title="Gather around the Campfire">
+                            <a href="https://automatic-potato.herokuapp.com/">The Campfire</a>
                         </li>
                         <li class="flex-item-5">
                             <a href="">Place holder</a>
